Update contact email from hello@dawnstarcorp.com to contact@dawnstarcorp.com

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         help you discover the natural path to wellness.
                     </p>
                     <div class="contact-info">
-                        <a href="mailto:hello@dawnstarcorp.com" class="contact-email">hello@dawnstarcorp.com</a>
+                        <a href="mailto:contact@dawnstarcorp.com" class="contact-email">contact@dawnstarcorp.com</a>
                     </div>
                 </div>
             </div>
