Add company address to footer: 1111B S Governors Ave STE 40086 Dover, DE 19904

--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 DawnStar Corp. All rights reserved.</p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p class="company-name">&copy; 2025 DawnStar Corp. All rights reserved.</p>
+                    <p class="company-address">1111B S Governors Ave STE 40086 Dover, DE 19904</p>
+                </div>
+            </div>
         </div>
     </footer>
 
