--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="header">
         <div class="header-container">
             <div class="logo">
-                <h2>DawnStar Corp.</h2>
+                <h2>DawnStar Global</h2>
             </div>
             <nav class="navigation">
                 <ul>
@@ -136,7 +136,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <p class="company-name">&copy; 2025 DawnStar Corp. All rights reserved.</p>
                     <p class="company-address">1111B S Governors Ave STE 40086 Dover, DE 19904</p>
                 </div>
             </div>
