Fix scroll jumping issue and update launch date
🔧 Scroll Fix:
- Disabled scroll-snap properties that were causing upward scroll jumping
- Improved active section detection using viewport center calculation
- Reduced parallax intensity from 0.3 to 0.1 for smoother effect
- Added transform reset when leaving hero section

📅 Content Update:
- Changed launch date from 'Available Spring 2025' to 'Available Winter 2025'

🎯 UX Improvements:
- Eliminated scroll jumping behavior
- Smoother scroll experience
- More accurate navigation highlighting
- Better parallax performance

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         </p>
                     </div>
                     
-                    <div class="coming-soon-date">Available Spring 2025</div>
+                    <div class="coming-soon-date">Available Winter 2025</div>
                 </div>
             </div>
         </section>
